<resources>
    <string name="app_name">SpendTrack</string>
    <string name="new_spending">New Spending</string>
    <string name="new_tag">New Tag</string>
    <string name="dash">-</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="purpose">Purpose</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tag">Tag</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="spendings">Spendings</string>
    <string name="total">Total</string>
    <string name="export">Export All</string>
    <string name="export_done">Data is exported in SpendTrack folder.</string>
    <string name="tags">Tags</string>
    <string name="sum">Sum</string>
    <string name="all">All</string>
    <string name="fetch">Fetch</string>
    <string name="text">Text</string>
    <string name="import_text">Import</string>
</resources>
